parser.output
Terminals unused in grammar

    INFINITY


Grammar

    0 $accept: query $end

    1 query: with_query SEMICOLON query SEMICOLON
    2      | select_query SEMICOLON
    3      | create_query SEMICOLON
    4      | insert_query SEMICOLON
    5      | update_query SEMICOLON
    6      | delete_query SEMICOLON
    7      | COMMIT SEMICOLON
    8      | ROLLBACK SEMICOLON

    9 with_query: WITH table_as_list

   10 table_as_list: table_as COMMA table_as
   11              | table_as

   12 table_as: table_desc AS select_query

   13 table_desc: NAME ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

   14 select_query: SELECT STAR FROM table_list
   15             | SELECT STAR FROM table_list WHERE condition
   16             | SELECT column_list FROM table_list
   17             | SELECT column_list FROM table_list WHERE condition

   18 column_list: column_list COMMA column
   19            | column

   20 column: DOT_NAME
   21       | NAME

   22 table_list: table COMMA table
   23           | table

   24 table: NAME

   25 condition: condition AND condition
   26          | condition OR condition
   27          | NOT condition
   28          | relex

   29 relex: expression GE expression
   30      | expression LT expression
   31      | expression GT expression
   32      | expression LE expression
   33      | expression NE expression
   34      | expression EQ expression

   35 expression: expression MULT expression
   36           | expression PLUS expression
   37           | expression MINUS expression
   38           | expression DIV expression
   39           | constant
   40           | DOT_NAME

   41 constant: TEXT_CONSTANT
   42         | INT_CONSTANT
   43         | FLOAT_CONSTANT

   44 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   45             | CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

   46 column_desc_list: column_desc_list COMMA column_desc
   47                 | column_desc

   48 column_desc: NAME type range
   49            | NAME type

   50 type: INTEGER
   51     | FLOAT
   52     | TEXT

   53 range: RANGE ROUND_BRACKET_OPEN BETWEEN constant AND constant ROUND_BRACKET_CLOSE

   54 constraint: PRIMARY KEY ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

   55 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

   56 column_val_list: column_val_list COMMA column_val
   57                | column_val

   58 column_val: TEXT_CONSTANT

   59 update_query: UPDATE NAME SET update_list WHERE condition
   60             | UPDATE NAME SET update_list

   61 update_list: update_list COMMA update
   62            | update

   63 update: NAME ASSIGN NAME
   64       | NAME ASSIGN constant

   65 delete_query: DELETE FROM NAME condition
   66             | DELETE FROM NAME


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DOT_NAME <str> (258) 20 40
    NAME <str> (259) 13 21 24 44 45 48 49 55 59 60 63 64 65 66
    TEXT_CONSTANT <str> (260) 41 58
    INT_CONSTANT <str> (261) 42
    FLOAT_CONSTANT <str> (262) 43
    INTEGER <int_val> (263) 50
    FLOAT <int_val> (264) 51
    TEXT <int_val> (265) 52
    AND (266) 25 53
    OR (267) 26
    NOT (268) 27
    MULT (269) 35
    PLUS (270) 36
    MINUS (271) 37
    DIV (272) 38
    GE (273) 29
    LT (274) 30
    GT (275) 31
    LE (276) 32
    NE (277) 33
    EQ (278) 34
    STAR (279) 14 15
    SEMICOLON (280) 1 2 3 4 5 6 7 8
    COMMIT (281) 7
    ROLLBACK (282) 8
    WITH (283) 9
    COMMA (284) 10 18 22 44 46 56 61
    AS (285) 12
    ROUND_BRACKET_OPEN (286) 13 44 45 53 54 55
    ROUND_BRACKET_CLOSE (287) 13 44 45 53 54 55
    SELECT (288) 14 15 16 17
    FROM (289) 14 15 16 17 65 66
    WHERE (290) 15 17 59
    CREATE (291) 44 45
    TABLE (292) 44 45
    RANGE (293) 53
    PRIMARY (294) 54
    KEY (295) 54
    INSERT (296) 55
    INTO (297) 55
    VALUES (298) 55
    ASSIGN (299) 63 64
    UPDATE (300) 59 60
    SET (301) 59 60
    DELETE (302) 65 66
    INFINITY (303)
    BETWEEN (304) 53
    REDC (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    query (52)
        on left: 1 2 3 4 5 6 7 8
        on right: 0 1
    with_query (53)
        on left: 9
        on right: 1
    table_as_list <vec_table> (54)
        on left: 10 11
        on right: 9
    table_as <table> (55)
        on left: 12
        on right: 10 11
    table_desc <name_cols> (56)
        on left: 13
        on right: 12
    select_query <table> (57)
        on left: 14 15 16 17
        on right: 2 12
    column_list <vec_string> (58)
        on left: 18 19
        on right: 13 16 17 18 54
    column <str> (59)
        on left: 20 21
        on right: 18 19
    table_list <vec_string> (60)
        on left: 22 23
        on right: 14 15 16 17
    table <str> (61)
        on left: 24
        on right: 22 23
    condition <logast> (62)
        on left: 25 26 27 28
        on right: 15 17 25 26 27 59 65
    relex <relast> (63)
        on left: 29 30 31 32 33 34
        on right: 28
    expression <exprast> (64)
        on left: 35 36 37 38 39 40
        on right: 29 30 31 32 33 34 35 36 37 38
    constant <constant> (65)
        on left: 41 42 43
        on right: 39 53 64
    create_query <table> (66)
        on left: 44 45
        on right: 3
    column_desc_list <vec_col_desc> (67)
        on left: 46 47
        on right: 44 45 46
    column_desc <col_desc> (68)
        on left: 48 49
        on right: 46 47
    type <int_val> (69)
        on left: 50 51 52
        on right: 48 49
    range <range> (70)
        on left: 53
        on right: 48
    constraint <vec_string> (71)
        on left: 54
        on right: 44
    insert_query <table> (72)
        on left: 55
        on right: 4
    column_val_list <vec_string> (73)
        on left: 56 57
        on right: 55 56
    column_val <str> (74)
        on left: 58
        on right: 56 57
    update_query <table> (75)
        on left: 59 60
        on right: 5
    update_list <vec_update_pair> (76)
        on left: 61 62
        on right: 59 60 61
    update <update_pair> (77)
        on left: 63 64
        on right: 61 62
    delete_query <table> (78)
        on left: 65 66
        on right: 6


State 0

    0 $accept: . query $end

    COMMIT    shift, and go to state 1
    ROLLBACK  shift, and go to state 2
    WITH      shift, and go to state 3
    SELECT    shift, and go to state 4
    CREATE    shift, and go to state 5
    INSERT    shift, and go to state 6
    UPDATE    shift, and go to state 7
    DELETE    shift, and go to state 8

    query         go to state 9
    with_query    go to state 10
    select_query  go to state 11
    create_query  go to state 12
    insert_query  go to state 13
    update_query  go to state 14
    delete_query  go to state 15


State 1

    7 query: COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 16


State 2

    8 query: ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 17


State 3

    9 with_query: WITH . table_as_list

    NAME  shift, and go to state 18

    table_as_list  go to state 19
    table_as       go to state 20
    table_desc     go to state 21


State 4

   14 select_query: SELECT . STAR FROM table_list
   15             | SELECT . STAR FROM table_list WHERE condition
   16             | SELECT . column_list FROM table_list
   17             | SELECT . column_list FROM table_list WHERE condition

    DOT_NAME  shift, and go to state 22
    NAME      shift, and go to state 23
    STAR      shift, and go to state 24

    column_list  go to state 25
    column       go to state 26


State 5

   44 create_query: CREATE . TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   45             | CREATE . TABLE NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

    TABLE  shift, and go to state 27


State 6

   55 insert_query: INSERT . INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    INTO  shift, and go to state 28


State 7

   59 update_query: UPDATE . NAME SET update_list WHERE condition
   60             | UPDATE . NAME SET update_list

    NAME  shift, and go to state 29


State 8

   65 delete_query: DELETE . FROM NAME condition
   66             | DELETE . FROM NAME

    FROM  shift, and go to state 30


State 9

    0 $accept: query . $end

    $end  shift, and go to state 31


State 10

    1 query: with_query . SEMICOLON query SEMICOLON

    SEMICOLON  shift, and go to state 32


State 11

    2 query: select_query . SEMICOLON

    SEMICOLON  shift, and go to state 33


State 12

    3 query: create_query . SEMICOLON

    SEMICOLON  shift, and go to state 34


State 13

    4 query: insert_query . SEMICOLON

    SEMICOLON  shift, and go to state 35


State 14

    5 query: update_query . SEMICOLON

    SEMICOLON  shift, and go to state 36


State 15

    6 query: delete_query . SEMICOLON

    SEMICOLON  shift, and go to state 37


State 16

    7 query: COMMIT SEMICOLON .

    $default  reduce using rule 7 (query)


State 17

    8 query: ROLLBACK SEMICOLON .

    $default  reduce using rule 8 (query)


State 18

   13 table_desc: NAME . ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 38


State 19

    9 with_query: WITH table_as_list .

    $default  reduce using rule 9 (with_query)


State 20

   10 table_as_list: table_as . COMMA table_as
   11              | table_as .

    COMMA  shift, and go to state 39

    $default  reduce using rule 11 (table_as_list)


State 21

   12 table_as: table_desc . AS select_query

    AS  shift, and go to state 40


State 22

   20 column: DOT_NAME .

    $default  reduce using rule 20 (column)


State 23

   21 column: NAME .

    $default  reduce using rule 21 (column)


State 24

   14 select_query: SELECT STAR . FROM table_list
   15             | SELECT STAR . FROM table_list WHERE condition

    FROM  shift, and go to state 41


State 25

   16 select_query: SELECT column_list . FROM table_list
   17             | SELECT column_list . FROM table_list WHERE condition
   18 column_list: column_list . COMMA column

    COMMA  shift, and go to state 42
    FROM   shift, and go to state 43


State 26

   19 column_list: column .

    $default  reduce using rule 19 (column_list)


State 27

   44 create_query: CREATE TABLE . NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   45             | CREATE TABLE . NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

    NAME  shift, and go to state 44


State 28

   55 insert_query: INSERT INTO . NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    NAME  shift, and go to state 45


State 29

   59 update_query: UPDATE NAME . SET update_list WHERE condition
   60             | UPDATE NAME . SET update_list

    SET  shift, and go to state 46


State 30

   65 delete_query: DELETE FROM . NAME condition
   66             | DELETE FROM . NAME

    NAME  shift, and go to state 47


State 31

    0 $accept: query $end .

    $default  accept


State 32

    1 query: with_query SEMICOLON . query SEMICOLON

    COMMIT    shift, and go to state 1
    ROLLBACK  shift, and go to state 2
    WITH      shift, and go to state 3
    SELECT    shift, and go to state 4
    CREATE    shift, and go to state 5
    INSERT    shift, and go to state 6
    UPDATE    shift, and go to state 7
    DELETE    shift, and go to state 8

    query         go to state 48
    with_query    go to state 10
    select_query  go to state 11
    create_query  go to state 12
    insert_query  go to state 13
    update_query  go to state 14
    delete_query  go to state 15


State 33

    2 query: select_query SEMICOLON .

    $default  reduce using rule 2 (query)


State 34

    3 query: create_query SEMICOLON .

    $default  reduce using rule 3 (query)


State 35

    4 query: insert_query SEMICOLON .

    $default  reduce using rule 4 (query)


State 36

    5 query: update_query SEMICOLON .

    $default  reduce using rule 5 (query)


State 37

    6 query: delete_query SEMICOLON .

    $default  reduce using rule 6 (query)


State 38

   13 table_desc: NAME ROUND_BRACKET_OPEN . column_list ROUND_BRACKET_CLOSE

    DOT_NAME  shift, and go to state 22
    NAME      shift, and go to state 23

    column_list  go to state 49
    column       go to state 26


State 39

   10 table_as_list: table_as COMMA . table_as

    NAME  shift, and go to state 18

    table_as    go to state 50
    table_desc  go to state 21


State 40

   12 table_as: table_desc AS . select_query

    SELECT  shift, and go to state 4

    select_query  go to state 51


State 41

   14 select_query: SELECT STAR FROM . table_list
   15             | SELECT STAR FROM . table_list WHERE condition

    NAME  shift, and go to state 52

    table_list  go to state 53
    table       go to state 54


State 42

   18 column_list: column_list COMMA . column

    DOT_NAME  shift, and go to state 22
    NAME      shift, and go to state 23

    column  go to state 55


State 43

   16 select_query: SELECT column_list FROM . table_list
   17             | SELECT column_list FROM . table_list WHERE condition

    NAME  shift, and go to state 52

    table_list  go to state 56
    table       go to state 54


State 44

   44 create_query: CREATE TABLE NAME . ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   45             | CREATE TABLE NAME . ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 57


State 45

   55 insert_query: INSERT INTO NAME . VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    VALUES  shift, and go to state 58


State 46

   59 update_query: UPDATE NAME SET . update_list WHERE condition
   60             | UPDATE NAME SET . update_list

    NAME  shift, and go to state 59

    update_list  go to state 60
    update       go to state 61


State 47

   65 delete_query: DELETE FROM NAME . condition
   66             | DELETE FROM NAME .

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    $default  reduce using rule 66 (delete_query)

    condition   go to state 67
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 48

    1 query: with_query SEMICOLON query . SEMICOLON

    SEMICOLON  shift, and go to state 71


State 49

   13 table_desc: NAME ROUND_BRACKET_OPEN column_list . ROUND_BRACKET_CLOSE
   18 column_list: column_list . COMMA column

    COMMA                shift, and go to state 42
    ROUND_BRACKET_CLOSE  shift, and go to state 72


State 50

   10 table_as_list: table_as COMMA table_as .

    $default  reduce using rule 10 (table_as_list)


State 51

   12 table_as: table_desc AS select_query .

    $default  reduce using rule 12 (table_as)


State 52

   24 table: NAME .

    $default  reduce using rule 24 (table)


State 53

   14 select_query: SELECT STAR FROM table_list .
   15             | SELECT STAR FROM table_list . WHERE condition

    WHERE  shift, and go to state 73

    $default  reduce using rule 14 (select_query)


State 54

   22 table_list: table . COMMA table
   23           | table .

    COMMA  shift, and go to state 74

    $default  reduce using rule 23 (table_list)


State 55

   18 column_list: column_list COMMA column .

    $default  reduce using rule 18 (column_list)


State 56

   16 select_query: SELECT column_list FROM table_list .
   17             | SELECT column_list FROM table_list . WHERE condition

    WHERE  shift, and go to state 75

    $default  reduce using rule 16 (select_query)


State 57

   44 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN . column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   45             | CREATE TABLE NAME ROUND_BRACKET_OPEN . column_desc_list ROUND_BRACKET_CLOSE

    NAME  shift, and go to state 76

    column_desc_list  go to state 77
    column_desc       go to state 78


State 58

   55 insert_query: INSERT INTO NAME VALUES . ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 79


State 59

   63 update: NAME . ASSIGN NAME
   64       | NAME . ASSIGN constant

    ASSIGN  shift, and go to state 80


State 60

   59 update_query: UPDATE NAME SET update_list . WHERE condition
   60             | UPDATE NAME SET update_list .
   61 update_list: update_list . COMMA update

    COMMA  shift, and go to state 81
    WHERE  shift, and go to state 82

    $default  reduce using rule 60 (update_query)


State 61

   62 update_list: update .

    $default  reduce using rule 62 (update_list)


State 62

   40 expression: DOT_NAME .

    $default  reduce using rule 40 (expression)


State 63

   41 constant: TEXT_CONSTANT .

    $default  reduce using rule 41 (constant)


State 64

   42 constant: INT_CONSTANT .

    $default  reduce using rule 42 (constant)


State 65

   43 constant: FLOAT_CONSTANT .

    $default  reduce using rule 43 (constant)


State 66

   27 condition: NOT . condition

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    condition   go to state 83
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 67

   25 condition: condition . AND condition
   26          | condition . OR condition
   65 delete_query: DELETE FROM NAME condition .

    AND  shift, and go to state 84
    OR   shift, and go to state 85

    $default  reduce using rule 65 (delete_query)


State 68

   28 condition: relex .

    $default  reduce using rule 28 (condition)


State 69

   29 relex: expression . GE expression
   30      | expression . LT expression
   31      | expression . GT expression
   32      | expression . LE expression
   33      | expression . NE expression
   34      | expression . EQ expression
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89
    GE     shift, and go to state 90
    LT     shift, and go to state 91
    GT     shift, and go to state 92
    LE     shift, and go to state 93
    NE     shift, and go to state 94
    EQ     shift, and go to state 95


State 70

   39 expression: constant .

    $default  reduce using rule 39 (expression)


State 71

    1 query: with_query SEMICOLON query SEMICOLON .

    $default  reduce using rule 1 (query)


State 72

   13 table_desc: NAME ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE .

    $default  reduce using rule 13 (table_desc)


State 73

   15 select_query: SELECT STAR FROM table_list WHERE . condition

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    condition   go to state 96
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 74

   22 table_list: table COMMA . table

    NAME  shift, and go to state 52

    table  go to state 97


State 75

   17 select_query: SELECT column_list FROM table_list WHERE . condition

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    condition   go to state 98
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 76

   48 column_desc: NAME . type range
   49            | NAME . type

    INTEGER  shift, and go to state 99
    FLOAT    shift, and go to state 100
    TEXT     shift, and go to state 101

    type  go to state 102


State 77

   44 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list . COMMA constraint ROUND_BRACKET_CLOSE
   45             | CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list . ROUND_BRACKET_CLOSE
   46 column_desc_list: column_desc_list . COMMA column_desc

    COMMA                shift, and go to state 103
    ROUND_BRACKET_CLOSE  shift, and go to state 104


State 78

   47 column_desc_list: column_desc .

    $default  reduce using rule 47 (column_desc_list)


State 79

   55 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN . column_val_list ROUND_BRACKET_CLOSE

    TEXT_CONSTANT  shift, and go to state 105

    column_val_list  go to state 106
    column_val       go to state 107


State 80

   63 update: NAME ASSIGN . NAME
   64       | NAME ASSIGN . constant

    NAME            shift, and go to state 108
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    constant  go to state 109


State 81

   61 update_list: update_list COMMA . update

    NAME  shift, and go to state 59

    update  go to state 110


State 82

   59 update_query: UPDATE NAME SET update_list WHERE . condition

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    condition   go to state 111
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 83

   25 condition: condition . AND condition
   26          | condition . OR condition
   27          | NOT condition .

    $default  reduce using rule 27 (condition)


State 84

   25 condition: condition AND . condition

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    condition   go to state 112
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 85

   26 condition: condition OR . condition

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65
    NOT             shift, and go to state 66

    condition   go to state 113
    relex       go to state 68
    expression  go to state 69
    constant    go to state 70


State 86

   35 expression: expression MULT . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 114
    constant    go to state 70


State 87

   36 expression: expression PLUS . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 115
    constant    go to state 70


State 88

   37 expression: expression MINUS . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 116
    constant    go to state 70


State 89

   38 expression: expression DIV . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 117
    constant    go to state 70


State 90

   29 relex: expression GE . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 118
    constant    go to state 70


State 91

   30 relex: expression LT . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 119
    constant    go to state 70


State 92

   31 relex: expression GT . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 120
    constant    go to state 70


State 93

   32 relex: expression LE . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 121
    constant    go to state 70


State 94

   33 relex: expression NE . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 122
    constant    go to state 70


State 95

   34 relex: expression EQ . expression

    DOT_NAME        shift, and go to state 62
    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    expression  go to state 123
    constant    go to state 70


State 96

   15 select_query: SELECT STAR FROM table_list WHERE condition .
   25 condition: condition . AND condition
   26          | condition . OR condition

    AND  shift, and go to state 84
    OR   shift, and go to state 85

    $default  reduce using rule 15 (select_query)


State 97

   22 table_list: table COMMA table .

    $default  reduce using rule 22 (table_list)


State 98

   17 select_query: SELECT column_list FROM table_list WHERE condition .
   25 condition: condition . AND condition
   26          | condition . OR condition

    AND  shift, and go to state 84
    OR   shift, and go to state 85

    $default  reduce using rule 17 (select_query)


State 99

   50 type: INTEGER .

    $default  reduce using rule 50 (type)


State 100

   51 type: FLOAT .

    $default  reduce using rule 51 (type)


State 101

   52 type: TEXT .

    $default  reduce using rule 52 (type)


State 102

   48 column_desc: NAME type . range
   49            | NAME type .

    RANGE  shift, and go to state 124

    $default  reduce using rule 49 (column_desc)

    range  go to state 125


State 103

   44 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA . constraint ROUND_BRACKET_CLOSE
   46 column_desc_list: column_desc_list COMMA . column_desc

    NAME     shift, and go to state 76
    PRIMARY  shift, and go to state 126

    column_desc  go to state 127
    constraint   go to state 128


State 104

   45 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE .

    $default  reduce using rule 45 (create_query)


State 105

   58 column_val: TEXT_CONSTANT .

    $default  reduce using rule 58 (column_val)


State 106

   55 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list . ROUND_BRACKET_CLOSE
   56 column_val_list: column_val_list . COMMA column_val

    COMMA                shift, and go to state 129
    ROUND_BRACKET_CLOSE  shift, and go to state 130


State 107

   57 column_val_list: column_val .

    $default  reduce using rule 57 (column_val_list)


State 108

   63 update: NAME ASSIGN NAME .

    $default  reduce using rule 63 (update)


State 109

   64 update: NAME ASSIGN constant .

    $default  reduce using rule 64 (update)


State 110

   61 update_list: update_list COMMA update .

    $default  reduce using rule 61 (update_list)


State 111

   25 condition: condition . AND condition
   26          | condition . OR condition
   59 update_query: UPDATE NAME SET update_list WHERE condition .

    AND  shift, and go to state 84
    OR   shift, and go to state 85

    $default  reduce using rule 59 (update_query)


State 112

   25 condition: condition . AND condition
   25          | condition AND condition .
   26          | condition . OR condition

    $default  reduce using rule 25 (condition)


State 113

   25 condition: condition . AND condition
   26          | condition . OR condition
   26          | condition OR condition .

    AND  shift, and go to state 84

    $default  reduce using rule 26 (condition)


State 114

   35 expression: expression . MULT expression
   35           | expression MULT expression .
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    $default  reduce using rule 35 (expression)


State 115

   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   36           | expression PLUS expression .
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT  shift, and go to state 86
    DIV   shift, and go to state 89

    $default  reduce using rule 36 (expression)


State 116

   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   37           | expression MINUS expression .
   38           | expression . DIV expression

    MULT  shift, and go to state 86
    DIV   shift, and go to state 89

    $default  reduce using rule 37 (expression)


State 117

   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression
   38           | expression DIV expression .

    $default  reduce using rule 38 (expression)


State 118

   29 relex: expression GE expression .
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 29 (relex)


State 119

   30 relex: expression LT expression .
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 30 (relex)


State 120

   31 relex: expression GT expression .
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 31 (relex)


State 121

   32 relex: expression LE expression .
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 32 (relex)


State 122

   33 relex: expression NE expression .
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 33 (relex)


State 123

   34 relex: expression EQ expression .
   35 expression: expression . MULT expression
   36           | expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . DIV expression

    MULT   shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    DIV    shift, and go to state 89

    $default  reduce using rule 34 (relex)


State 124

   53 range: RANGE . ROUND_BRACKET_OPEN BETWEEN constant AND constant ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 131


State 125

   48 column_desc: NAME type range .

    $default  reduce using rule 48 (column_desc)


State 126

   54 constraint: PRIMARY . KEY ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

    KEY  shift, and go to state 132


State 127

   46 column_desc_list: column_desc_list COMMA column_desc .

    $default  reduce using rule 46 (column_desc_list)


State 128

   44 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint . ROUND_BRACKET_CLOSE

    ROUND_BRACKET_CLOSE  shift, and go to state 133


State 129

   56 column_val_list: column_val_list COMMA . column_val

    TEXT_CONSTANT  shift, and go to state 105

    column_val  go to state 134


State 130

   55 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE .

    $default  reduce using rule 55 (insert_query)


State 131

   53 range: RANGE ROUND_BRACKET_OPEN . BETWEEN constant AND constant ROUND_BRACKET_CLOSE

    BETWEEN  shift, and go to state 135


State 132

   54 constraint: PRIMARY KEY . ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 136


State 133

   44 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE .

    $default  reduce using rule 44 (create_query)


State 134

   56 column_val_list: column_val_list COMMA column_val .

    $default  reduce using rule 56 (column_val_list)


State 135

   53 range: RANGE ROUND_BRACKET_OPEN BETWEEN . constant AND constant ROUND_BRACKET_CLOSE

    TEXT_CONSTANT   shift, and go to state 63
    INT_CONSTANT    shift, and go to state 64
    FLOAT_CONSTANT  shift, and go to state 65

    constant  go to state 137


State 136

   54 constraint: PRIMARY KEY ROUND_BRACKET_OPEN . column_list ROUND_BRACKET_CLOSE
